apps/romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
  labels:
    app.kubernetes.io/name: romm
spec:
  selector:
    app.kubernetes.io/name: romm
  ports:
    - port: 8080
      targetPort: 8080
      name: http
